samples/httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      volumes:
        - name: demo-pv-storage
          persistentVolumeClaim:
            claimName: demo-pvc
      containers:
      - image: ocregistry.localhost:5002/kennethreitz/httpbin
        name: httpbin
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: "/data"
            name: demo-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: demo
spec:
  ports:
  - name: 80-80
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
  type: NodePort
