samples/sample-svc-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  ports:
  - name: 80-80
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
  type: NodePort
